# muckrake

./: .gitignore  .jscpd.json  .projections.json  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  go.mod  go.sum  main.go
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
cmd/: generated.go  init.go  list.go  open.go  pipeline.go  read.go  sign.go  status.go  stubs.go  sync.go  tag.go
cmd/mkrk/: main.go
crates/muckrake/: Cargo.toml
crates/muckrake-core/: Cargo.toml
crates/muckrake-core/src/: entity.rs  error.rs  lib.rs  relationship.rs  source.rs  storage.rs
crates/muckrake-core/src/ingest/: extractor.rs  mod.rs  normalizer.rs  parser.rs  pipeline.rs
crates/muckrake-core/src/network/: client.rs  config.rs  external.rs  mod.rs  tor.rs
crates/muckrake-web/: Cargo.toml
crates/muckrake-web/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
crates/muckrake-web/frontend/src/: App.tsx  api.ts  hooks.ts  index.css  types.ts
crates/muckrake-web/frontend/src/components/: FileBrowser.tsx  FuzzySelect.tsx  Graph.tsx  MenuBar.tsx  OpenProjectModal.tsx  OpenWorkspaceModal.tsx  SaveWorkspaceModal.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx
crates/muckrake-web/frontend/src/i18n/: index.ts
crates/muckrake-web/frontend/src/i18n/locales/: en.json
crates/muckrake-web/frontend/src/storage/: recentProjects.test.ts  recentProjects.ts
crates/muckrake-web/frontend/src/styles/: app.css.ts  fileBrowser.css.ts  fuzzySelect.css.ts  graph.css.ts  menuBar.css.ts  settingsModal.css.ts  sidebar.css.ts  statusBar.css.ts  theme.css.ts
crates/muckrake-web/frontend/src/test/: setup.ts
crates/muckrake-web/frontend/src/utils/: colors.ts
crates/muckrake-web/src/: config.rs  main.rs  session.rs  state.rs  workspace.rs
crates/muckrake-web/src/api/: config.rs  entities.rs  files.rs  mod.rs  relationships.rs  session.rs  workspaces.rs
crates/muckrake/src/: main.rs
docs/: concepts.md  references.md  tools.md
internal/cli/: generated.go  init.go  list.go  open.go  pipeline.go  read.go  sign.go  status.go  sync.go  tag.go
internal/context/: discovery.go
internal/db/: migrate.go  pipeline.go  pipeline_test.go  project.go  project_test.go  ruleset.go  schema.go  workspace.go
internal/evaluate/: engine.go  engine_test.go
internal/generator/: builtins.go  generator.go
internal/integrity/: hash.go  hash_test.go  immutable.go  verify.go
internal/materialize/: engine.go
internal/models/: file.go  pipeline.go  pipeline_test.go  policy.go  policy_test.go  rule.go  ruleset.go  scope.go  scope_test.go  tag.go
internal/reference/: format.go  match.go  parse.go  parse_test.go  types.go
internal/resolve/: resolve.go  subject.go
internal/walk/: walk.go  walk_test.go
src/: lib.rs  main.rs  util.rs  walk.rs
src/cli/: categorize.rs  category.rs  inbox.rs  ingest.rs  init.rs  list.rs  mod.rs  pipeline.rs  projects.rs  read.rs  rule.rs  scope.rs  sign.rs  status.rs  tags.rs  tool.rs  verify.rs  view.rs
src/context/: discovery.rs  mod.rs  scope.rs
src/db/: iden.rs  materialize.rs  mod.rs  pipeline.rs  project.rs  ruleset.rs  schema.rs  workspace.rs
src/integrity/: mod.rs
src/models/: category.rs  file.rs  mod.rs  pipeline.rs  policy.rs  rule.rs  ruleset.rs  scope.rs  sign.rs  tag.rs
src/pipeline/: state.rs
src/reference/: format.rs  mod.rs  parse.rs  resolve.rs  types.rs
src/rules/: engine.rs  evaluate.rs  mod.rs
src/tools/: env.rs  execute.rs  mod.rs  resolve.rs
tests/: cli.rs  cli_test.go  test-musl.sh
