[package]
name = "muckrake"
version = "0.2.0"
edition = "2021"
authors = ["Bailey \"monokrome\" Stoner <monokrome@monokro.me>"]
license = "BSD-2-Clause"
repository = "https://github.com/monokrome/muckrake"
description = "Investigative journalism research management CLI"

[[bin]]
name = "mkrk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.37", features = ["bundled"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
console = "0.15"
dialoguer = "0.11"
sea-query = "1.0.0-rc.30"
sea-query-rusqlite = "0.8.0-rc.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cognitive_complexity = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
