[package]
name = "muckrake-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core entity models, traits, and storage for investigative journalism"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
strsim.workspace = true
petgraph.workspace = true
reqwest.workspace = true
url.workspace = true
rand.workspace = true
which.workspace = true
dirs.workspace = true
tracing.workspace = true
regex.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
