[package]
name = "muckrake-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web UI for muckrake investigative journalism tool"

[dependencies]
muckrake-core = { path = "../muckrake-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

# Time
chrono.workspace = true

# Directories
dirs.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
