[package]
name = "muckrake"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mkrk"
path = "src/main.rs"

[dependencies]
muckrake-core = { path = "../muckrake-core" }

iced = { version = "0.13", features = ["canvas", "wgpu", "tokio"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "sync", "macros"] }
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
rfd = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.16"
